[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yente"
version = "5.4.0"
description = "A simple and fast API service for querying FollowTheMoney data, including OpenSanctions."
authors = [{ name = "OpenSanctions", email = "info@opensanctions.org" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "elasticsearch[async] == 9.4.1",
    "opensearch-py[async] == 3.2.0",
    "uvicorn[standard] == 0.49.0",
    "httpx[http2] == 0.28.1",
    "aiohttp[speedups] == 3.14.1",
    "boto3 ~= 1.37",
    "fastapi == 0.137.0",
    "python-multipart == 0.0.32",
    "email-validator == 2.3.0",
    "structlog == 26.1.0",
    "pyicu == 2.16.2",
    "pydantic",
    "anyio == 4.13.0",
    "orjson == 3.11.9",
    "text-unidecode == 1.3",
    "click >= 8.2,< 8.5",
    "normality == 3.1.0",
    "countrynames == 1.17.0",
    "cryptography == 49.0.0",
    "followthemoney == 4.9.2",
    "fingerprints == 1.3.1",
    "nomenklatura == 4.9.1",
    "rigour == 2.1.2",
    "asyncstdlib == 3.14.0",
    "aiocron == 2.1",
    "aiocsv == 1.4.1",
    "aiofiles == 25.1.0",
    "rich",
    "opentelemetry-distro[otlp]",
    "opentelemetry-instrumentation-fastapi",
]
requires-python = ">=3.11,<=3.14"

[project.urls]
Documentation = "https://www.opensanctions.org/docs/yente/"
Repository = "https://github.com/opensanctions/yente.git"
Issues = "https://github.com/opensanctions/yente/issues"

[project.scripts]
yente = "yente.cli:cli"


[dependency-groups]
dev = [
    "ruff",
    "build",
    "debugpy",
    "mypy >=1.13,<3.0",
    "pytest == 9.0.3",
    "pytest-cov >= 6.0.0, < 8.0.0",
    "pytest-asyncio >= 0.25.0, < 2.0.0",
    "pytest-httpx >= 0.35.0, < 1.0.0",
    "flake8 >= 2.6.0",
    "types-aiofiles>=24.0,<26.0",
    "boto3-stubs ~= 1.37",
    "bump2version == 1.0.1",
    "pip >10.0.0",
    "prek",
    "types-PyYAML",
    "markdown-it-py",
]
docs = [
    "pillow",
    "cairosvg",
    "mkdocs",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-redirects",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.sdist]
only-include = ["yente", "LICENSE", "README.md"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:Elasticsearch built-in security:"]
asyncio_mode = "strict"
# asyncio_default_fixture_loop_scope=session
log_cli = true
